WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162940
Missing quotation mark when <q> gets reparented.
https://bugs.webkit.org/show_bug.cgi?id=162940
Summary
Missing quotation mark when <q> gets reparented.
alan
Reported
2016-10-04 14:43:25 PDT
SSIA.
Attachments
Patch
(5.80 KB, patch)
2016-10-04 15:10 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2016-10-04 15:10:06 PDT
Created
attachment 290650
[details]
Patch
Simon Fraser (smfr)
Comment 2
2016-10-04 15:37:31 PDT
***
Bug 162939
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 3
2016-10-05 11:52:50 PDT
Comment on
attachment 290650
[details]
Patch Clearing flags on attachment: 290650 Committed
r206821
: <
http://trac.webkit.org/changeset/206821
>
WebKit Commit Bot
Comment 4
2016-10-05 11:52:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug