Source/WebCore/rendering/RenderQuote.h
@@ -40,6 +40,7 @@ private:
     const char* renderName() const override { return "RenderQuote"; }
     bool isQuote() const override { return true; }
     void styleDidChange(StyleDifference, const RenderStyle*) override;
+    void insertedIntoTree() override;
     void willBeRemovedFromTree() override;
 
     String computeText() const;
